1.3.0.?
    - bug 570: -t0 wasn't deleting records
    - use configuration file for options similar to Microsoft's DNS client
    - follow NS records when primary SOA update fails
    - bug 484: detect the authoritative domain name by doing an SOA query
    - bug 467: add -r option for PTR updates
    - bug 415: Debian and Ubuntu support
    - fix option processing bug
1.2.1.48 [2007-07-11]
    - only support DHCP hooks in Solaris 10 and later
    - bug 189: solaris hook used wrong path to dnsupdate
    - added -N option (no-authenticate)
    - bug 72: long TSIG identifier causes refused updates; -I flag reverts
    - improve portability to Solaris 2.6, package name is now QSFTdnsup
    - improve portability to older versions of VAS 3
1.2.0.30 [2006-08-07]
    - add hook install script
    - improve documentation, portability, error messages
    - add -I option for strict RFC operation
1.0.0.12 [2006-05-10]
    - initial release